--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
 </head>
 <body>
 
-  <h1>Zoya's Chatbot</h1>
+  <h1>Zoya's Chatbot v2</h1>
   <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
   <df-messenger
     intent="WELCOME"
     chat-title="Zoya's Chatbot"
     agent-id="98129509-f285-46c3-8191-29def1a5aa1a"
     language-code="en"
+    expand-on-load="true"
   ></df-messenger>
 
 </body>
