--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
     <img src="./myPhoto.png" alt="Student Image" />
     <div class="intro-text">
       <p>
-        Meet Zoya’s Chatbot — your personal school helper! Whether you're looking for quick answers, study tips, or just
-        some help with your homework, this friendly bot is here to guide you. Go ahead and ask anything!
+        about chat bot.... 
       </p>
     </div>
   </div>
