--- a/index.html
+++ b/index.html
@@ -97,14 +97,26 @@
     <img src="./myPhoto.png" alt="Student Image" />
     <div class="intro-text">
       <p>
-        about chat bot.... 
+        about chat bot...
       </p>
     </div>
   </div>
 
   <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
   <df-messenger intent="WELCOME" chat-title="Zoya's Chatbot" agent-id="98129509-f285-46c3-8191-29def1a5aa1a"
-    language-code="en" expand="true"></df-messenger>
+    language-code="en"></df-messenger>
+
+  <script>
+    const dfMessenger = document.querySelector('df-messenger');
+    const mediaQuery = window.matchMedia('(min-width: 601px)');
+
+    const updateChatbox = (e) => e.matches
+      ? dfMessenger.setAttribute('expand', 'true')
+      : dfMessenger.removeAttribute('expand');
+
+    mediaQuery.addEventListener('change', updateChatbox);
+    updateChatbox(mediaQuery);
+  </script>
 
 </body>
 
